--- a/ui/ExpenseForm.html
+++ b/ui/ExpenseForm.html
@@ -3,163 +3,265 @@
 
 <head>
   <base target="_top">
-  <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #667eea;
+      --primary-dark: #764ba2;
+      --text: #333;
+      --text-light: #666;
+      --bg: #f8f9fa;
+      --card-bg: #fff;
+      --error: #d93025;
+      --success: #2e7d32;
+    }
+
     body {
+      font-family: 'Inter', -apple-system, sans-serif;
+      margin: 0;
       padding: 20px;
-      font-size: 14px;
-      /* Increased slightly */
+      color: var(--text);
+      background: var(--bg);
     }
 
-    .block {
+    .form-container {
+      background: var(--card-bg);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+      border: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
+    h2 {
+      margin-top: 0;
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--primary-dark);
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .form-group {
       margin-bottom: 15px;
-      /* Increased spacing */
     }
 
-    .actions {
-      margin-top: 25px;
+    label {
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--text-light);
+      display: block;
+      margin-bottom: 6px;
     }
 
     input[type="text"],
     input[type="number"],
     select {
       width: 100%;
+      padding: 10px 12px;
+      font-size: 14px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
       box-sizing: border-box;
-      font-size: 14px;
-      /* Consistent font size */
-      padding: 4px;
-      /* More padding for larger font */
+      font-family: inherit;
+      transition: border-color 0.2s, box-shadow 0.2s;
     }
 
-    #expenseAmount {
-      width: 150px;
-    }
-
-    label {
-      font-size: 14px;
-      margin-bottom: 4px;
-      display: block;
-    }
-
-    .inline-group {
-      display: flex;
-      gap: 20px;
-    }
-
-    .inline-group .block {
-      flex: 1;
+    input:focus,
+    select:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
     }
 
     .checkbox-row {
       display: flex;
-      gap: 20px;
-      align-items: center;
+      gap: 15px;
+      background: #f1f3f9;
+      padding: 12px;
+      border-radius: 10px;
+      margin: 20px 0;
     }
 
     .checkbox-inline {
-      display: inline-flex;
+      display: flex;
       align-items: center;
-      gap: 5px;
-      font-size: 14px;
+      gap: 6px;
+      font-size: 13px;
+      font-weight: 600;
+      cursor: pointer;
+      user-select: none;
+      color: var(--text);
+    }
+
+    .checkbox-inline input {
+      width: 16px;
+      height: 16px;
       cursor: pointer;
     }
 
-    .checkbox-inline input[type="checkbox"] {
-      margin: 0;
+    .actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 25px;
     }
 
-    .error-message {
-      color: #d93025;
+    button {
+      flex: 1;
+      padding: 12px;
+      font-size: 14px;
+      font-weight: 600;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      transition: opacity 0.2s, transform 0.1s;
+      font-family: inherit;
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
+
+    .btn-primary {
+      background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+      color: white;
+      box-shadow: 0 4px 10px rgba(118, 75, 162, 0.2);
+    }
+
+    .btn-secondary {
+      background: #f1f3f4;
+      color: var(--text);
+    }
+
+    button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    .error-box {
+      background: #fce8e6;
+      color: var(--error);
+      padding: 10px 14px;
+      border-radius: 8px;
+      margin-bottom: 20px;
       font-size: 13px;
-      margin-bottom: 10px;
-      padding: 8px 12px;
-      background-color: #fce8e6;
-      border-radius: 4px;
       display: none;
+      border: 1px solid #f5c2c7;
     }
 
     .input-error {
-      border: 2px solid #d93025 !important;
-      background-color: #fef7f6;
+      border-color: var(--error) !important;
+      background: #fff8f8;
+    }
+
+    .required-star {
+      color: var(--error);
     }
   </style>
 
 </head>
 
 <body>
-  <form id="expenseForm">
-    <div id="errorMessage" class="error-message"></div>
-    <div class="block form-group">
-      <label for="expenseName"><b>Expense Name*</b></label>
-      <input type="text" id="expenseName" placeholder="home insurance" required>
-    </div>
+  <div class="form-container">
+    <h2>💸 Add New Expense</h2>
 
-    <div class="block form-group">
-      <label for="expenseType"><b>Expense Type*</b></label>
-      <input type="text" id="expenseType" list="typeChoices" placeholder="Utilities" required>
-      <datalist id="typeChoices">
-        <? for (var i = 0; i < expenseTypes.length; i++) { ?>
-        <option value="<?= expenseTypes[i] ?>">
+    <div id="errorMessage" class="error-box"></div>
+
+    <form id="expenseForm">
+      <div class="form-group">
+        <label for="expenseName">Expense Name <span class="required-star">*</span></label>
+        <input type="text" id="expenseName" placeholder="e.g. Home Insurance" required>
+      </div>
+
+      <div class="form-group">
+        <label for="expenseType">Category <span class="required-star">*</span></label>
+        <input type="text" id="expenseType" list="typeChoices" placeholder="e.g. Utilities" required>
+        <datalist id="typeChoices">
+          <? for (var i = 0; i < expenseTypes.length; i++) { ?>
+          <option value="<?= expenseTypes[i] ?>">
+            <? } ?>
+        </datalist>
+      </div>
+
+      <div class="form-group">
+        <label for="expenseAmount">Amount ($)</label>
+        <input type="number" step="0.01" id="expenseAmount" placeholder="0.00">
+      </div>
+
+      <div class="checkbox-row">
+        <label class="checkbox-inline">
+          <input type="checkbox" id="papCheckbox"> PAP
+        </label>
+        <label class="checkbox-inline">
+          <input type="checkbox" id="splitCheckbox" checked> Split
+        </label>
+        <label class="checkbox-inline">
+          <input type="checkbox" id="paidCheckbox"> Paid
+        </label>
+      </div>
+
+      <div class="form-group">
+        <label for="expensePeriod">Billing Period</label>
+        <select id="expensePeriod">
+          <option value="">Select Period</option>
+          <? for (var i = 0; i < expensePeriods.length; i++) { ?>
+          <option value="<?= expensePeriods[i] ?>">
+            <?= expensePeriods[i] ?>
+          </option>
           <? } ?>
-      </datalist>
-    </div>
+        </select>
+      </div>
 
-    <div class="block form-group">
-      <label for="expenseAmount"><b>Amount ($)</b></label>
-      <input type="number" step="0.01" id="expenseAmount" placeholder="0.00">
-    </div>
+      <div class="form-group">
+        <label for="paidBySelect">Who Paid?</label>
+        <select id="paidBySelect">
+          <option value="0">Not Specified</option>
+          <? for (var i = 0; i < spouseNames.length; i++) { ?>
+          <option value="<?= i + 1 ?>">
+            <?= spouseNames[i] ?>
+          </option>
+          <? } ?>
+        </select>
+      </div>
 
-    <div class="block checkbox-row">
-      <label class="checkbox-inline"><input type="checkbox" id="papCheckbox"> PAP</label>
-      <label class="checkbox-inline"><input type="checkbox" id="splitCheckbox" checked> Split</label>
-      <label class="checkbox-inline"><input type="checkbox" id="paidCheckbox"> Paid</label>
-    </div>
-
-
-    <div class="block form-group">
-      <label for="expensePeriod"><b>Billing Period</b></label>
-      <select id="expensePeriod">
-        <option value="">-- Select Period --</option>
-        <? for (var i = 0; i < expensePeriods.length; i++) { ?>
-        <option value="<?= expensePeriods[i] ?>">
-          <?= expensePeriods[i] ?>
-        </option>
-        <? } ?>
-      </select>
-    </div>
-
-    <div class="block form-group">
-      <label for="paidBySelect"><b>Paid By</b></label>
-      <select id="paidBySelect">
-        <option value="0">-- Select --</option>
-        <? for (var i = 0; i < spouseNames.length; i++) { ?>
-        <option value="<?= i + 1 ?>">
-          <?= spouseNames[i] ?>
-        </option>
-        <? } ?>
-      </select>
-    </div>
-
-    <div class="block actions">
-      <button type="button" class="blue" id="submit-btn" onclick="submitForm()">Add Expense</button>
-      <button type="button" onclick="google.script.host.close()">Cancel</button>
-    </div>
-  </form>
+      <div class="actions">
+        <button type="button" class="btn-primary" id="submit-btn" onclick="submitForm()">Add Expense</button>
+        <button type="button" class="btn-secondary" onclick="google.script.host.close()">Cancel</button>
+      </div>
+    </form>
+  </div>
 
   <script>
     const executionMode = <?= mode ?>;
 
+    // Handle PAP and Paid mutual exclusivity
+    const papCheckbox = document.getElementById('papCheckbox');
+    const paidCheckbox = document.getElementById('paidCheckbox');
+
+    papCheckbox.addEventListener('change', function () {
+      if (this.checked) {
+        paidCheckbox.checked = false;
+      }
+    });
+
+    paidCheckbox.addEventListener('change', function () {
+      if (this.checked) {
+        papCheckbox.checked = false;
+      }
+    });
+
     function submitForm() {
       const btn = document.getElementById('submit-btn');
       btn.disabled = true;
-      btn.textContent = 'Processing...';
+      btn.textContent = 'Adding...';
 
       var name = document.getElementById('expenseName').value;
       var type = document.getElementById('expenseType').value;
       var amount = document.getElementById('expenseAmount').value;
-      var pap = document.getElementById('papCheckbox').checked;
+      var pap = papCheckbox.checked;
       var split = document.getElementById('splitCheckbox').checked;
-      var paid = document.getElementById('paidCheckbox').checked;
+      var paid = paidCheckbox.checked;
       var period = document.getElementById('expensePeriod').value;
 
       var paidBySelect = document.getElementById('paidBySelect');
@@ -167,7 +269,6 @@
       var paidByName = paidBySelect.options[paidBySelect.selectedIndex].text;
       if (paidByIndex === 0) paidByName = '';
 
-      // Clear previous errors
       clearErrors();
 
       var errors = [];
@@ -176,13 +277,13 @@
         document.getElementById('expenseName').classList.add('input-error');
       }
       if (!type) {
-        errors.push('Expense Type is required');
+        errors.push('Category is required');
         document.getElementById('expenseType').classList.add('input-error');
       }
 
       if (errors.length > 0) {
         var errorDiv = document.getElementById('errorMessage');
-        errorDiv.innerHTML = errors.join('<br>');
+        errorDiv.innerHTML = '<strong>Validation Error:</strong><br>' + errors.join('<br>');
         errorDiv.style.display = 'block';
         btn.disabled = false;
         btn.textContent = 'Add Expense';
