fixing ui dialogs

--- a/ui/ExpenseForm.html
+++ b/ui/ExpenseForm.html
@@ -19,7 +19,7 @@
     body {
       font-family: 'Inter', -apple-system, sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       color: var(--text);
       background: var(--bg);
     }
@@ -191,10 +191,10 @@
 
       <div class="checkbox-row">
         <label class="checkbox-inline">
-          <input type="checkbox" id="papCheckbox"> PAP
+          <input type="checkbox" id="splitCheckbox" checked> Split
         </label>
         <label class="checkbox-inline">
-          <input type="checkbox" id="splitCheckbox" checked> Split
+          <input type="checkbox" id="papCheckbox"> PAP
         </label>
         <label class="checkbox-inline">
           <input type="checkbox" id="paidCheckbox"> Paid
